welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:26: error: not found: value couleur
    if (getCouleurSol()==couleur){
                         ^